--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@swup/livewire-plugin",
-  "description": "This plugin adds support for Laravel Livewire",
   "amdName": "SwupLivewirePluginPlugin",
   "version": "2.0.0",
+  "description": "A swup plugin for integrating Laravel Livewire",
   "type": "module",
   "source": "src/index.js",
   "main": "./dist/index.cjs",
