--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swup/livewire-plugin",
-  "amdName": "SwupLivewirePluginPlugin",
+  "amdName": "SwupLivewirePlugin",
   "version": "2.0.0",
   "description": "A swup plugin for integrating Laravel Livewire",
   "type": "module",
